--- a/index.html
+++ b/index.html
@@ -2,35 +2,39 @@
 <html>
 	<head>
 		<link rel="stylesheet" type="text/css" href="assets/styles/main.css">
+		<link href='https://fonts.googleapis.com/css?family=Abril+Fatface' rel='stylesheet' type='text/css'>
+		<link href='https://fonts.googleapis.com/css?family=Oxygen:400,700' rel='stylesheet' type='text/css'>
 		<script type="javascript" src="assets/scripts/main.js"></script>
-
 		<title>Amy Langa</title>
 	</head>
 	<body>
 
-	<div class="navbar">
-		<ul>
-			<li><a href="#about">About</a></li>
-			<li><a href="#skills">Skills</a></li>
-			<li><a href="#portfolio">Portfolio</a></li>
-			<li><a href="#contact">Contact</a></li>
-			<li><a href="/resume.pdf">Resume</a></li>
-		</ul>
+	<div class="navbar-container">
+		<div class="navbar">
+			<ul>
+				<li><a href="#about">About</a></li>
+				<li><a href="#skills">Skills</a></li>
+				<li><a href="#portfolio">Portfolio</a></li>
+				<li><a href="#contact">Contact</a></li>
+				<li><a href="/resume.pdf">Resume</a></li>
+			</ul>
+		</div>
 	</div>
 
 	<div class="main-container">
-		<h2>Hi, my name is Amy and I'm a</h2>
-		<h1>UX Designer &amp; Developer</h1>
+		<div class="intro">
+			<h2>Hi, my name is Amy and I'm a</h2>
+			<h1>UX Designer &amp; Developer</h1>
 
-		<a class="button" href="#about">Tell Me More</a>
-
-		<hr />
+			<div class="more-info">
+				<a class="button" href="#about">Tell Me More</a>
+			</div>
+			<hr />
+		</div>
 
 		<div id="about">
 			<h2>About</h2>
-			<div class="circular-image">
-				<img src="img/amy.png" />
-			</div>
+			<img src="img/amy.png" />
 			<div>
 				<p>I am a UX Designer based in Chicago, IL. I am a recent transplant from Denver, CO. I believe that 
 				data-driven design removes much inefficient subjectivity and allows products to be molded for the most 
@@ -52,7 +56,7 @@
 		</div>
 
 		<div id="skills">
-			<h2>About</h2>
+			<h2>Skills</h2>
 			<ul class="skills-list">
 				<li>
 					<img src="assets/testing-icon.png" />
@@ -104,7 +108,7 @@
 					<p class="strong">Taskly</p>
 					<p>Taskly is a fictional project management software application. In this three month UX project, 
 					I was in charge of everything, including competitor analysis, user testing, prototyping, and visual 
-					design. The final project is a development-ready design encompassing Taskly’s MVP.</p>
+					design. The final project is a development-ready design encompassing Taskly's MVP.</p>
 				</div>
 			</div>
 
@@ -113,7 +117,8 @@
 
 		<div id="contact">
 			<h2>I'd love to hear from you!</h2>
-			<a class="button" window.open('mailto:alanga48@gmail.com');>Get in Touch</a>
+			<p>also include email address info...</p>
+			<a href="#" class="button" onclick="window.open('mailto:alanga48@gmail.com');">Get in Touch</a>
 
 			<div class="social">
 				<ul>
