--- a/index.html
+++ b/index.html
@@ -25,33 +25,30 @@
 		<div class="intro">
 			<h2>Hi, my name is Amy and I'm a</h2>
 			<h1>UX Designer &amp; Developer</h1>
+			<h2>based in Chicago, IL</h2>
 
 			<div class="more-info">
-				<a class="button" href="#about">Tell Me More</a>
+				<a class="button" href="#about">Learn More</a>
 			</div>
 			<hr />
 		</div>
 
 		<div id="about">
 			<h2>About</h2>
-			<img src="img/amy.png" />
-			<div>
-				<p>I am a UX Designer based in Chicago, IL. I am a recent transplant from Denver, CO. I believe that 
-				data-driven design removes much inefficient subjectivity and allows products to be molded for the most 
-				important people in the conversation - the users.</p>
+			<div class="img-column">
+				<img class="amy-img" src="img/amy.png" />
+			</div>
+			<div class="about-column">
+				<p>I believe that data-driven design removes much inefficient subjectivity and allows products to be 
+				molded for the most important people in the conversation - the users.</p>
 				<p>I began my journey studying psychology as an undergrad. I was and still am fascinated by the 
 				complexities of human behavior and wanted to gain a deeper understanding of what motivates people. After 
-				graduation, I found another passion in programming. Ilove language and problem solving, and I felt a 
-				powerful draw to the tech world. I havespent the last few years working professionally as a web 
-				applications developer.</p>
+				graduation, I found another passion in programming.</p>
 				<p>Now I feel called again to the fascinating world of UX - a field that sits beautifully between 
-				psychology and development. I have completed an immersive UX course, which has equipped me with a broad 
-				understanding of a UX professional’s role. I have a strong interest usability testing, interaction 
-				design and, increasingly, visual design. </p>
-				<p>I can bring to your team coded wireframes and prototypes in addition tousing standard design software 
-				such as Invision and Photoshop. I know how to design forboth business and user needs and make sure those
-				 designs are technically feasible. And, of course, I bring endless curiosity for the craft of UX. Let’s 
-				 work and learn together! <a href="#contact">Contact me</a>.</p>
+				psychology and development. I can bring to your team coded wireframes and prototypes in addition to utilizing 
+				standard design software. I know how to design for both business and user needs and make sure those
+				 designs are technically feasible. I am passionate about understanding people and creating products 
+				 made especially for them. Let’s work and learn together! <a href="#contact">Contact me</a>.</p>
 			</div>
 		</div>
 
