Not done but getting there.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<div class="navbar-container">
 		<div class="navbar">
 			<ul>
-				<li><a href="#about">About</a></li>
+				<li><a href="#about">About Me</a></li>
 				<li><a href="#skills">Skills</a></li>
 				<li><a href="#portfolio">Portfolio</a></li>
 				<li><a href="#contact">Contact</a></li>
@@ -21,42 +21,43 @@
 		</div>
 	</div>
 
-	<div class="main-container">
-		<div class="intro">
-			<h2>Hi, my name is Amy and I'm a</h2>
-			<h1>UX Designer &amp; Developer</h1>
-			<h2>based in Chicago, IL</h2>
+	<div class="intro">
+			<h2><span class="blue-highlight">Hi, my name is Amy and I'm a</span></h2>
+			<h1><span class="blue-highlight">UX Designer &amp; Developer</span></h1>
+			<h2><span class="blue-highlight">based in Chicago, IL</span></h2>
 
 			<div class="more-info">
 				<a class="button" href="#about">Learn More</a>
 			</div>
-			<hr />
 		</div>
 
-		<div id="about">
-			<h2>About</h2>
-			<div class="img-column">
-				<img class="amy-img" src="img/amy.png" />
-			</div>
+	<div class="main-container">
+
+		<div id="about" class="section">
+			<h2><span class="blue-highlight">About Me</span></h2>
+<!-- 			<div class="img-column">
+				<img class="amy-img" src="img/amy-3.png" />
+			</div> -->
 			<div class="about-column">
 				<p>I believe that data-driven design removes much inefficient subjectivity and allows products to be 
 				molded for the most important people in the conversation - the users.</p>
 				<p>I began my journey studying psychology as an undergrad. I was and still am fascinated by the 
 				complexities of human behavior and wanted to gain a deeper understanding of what motivates people. After 
-				graduation, I found another passion in programming.</p>
+				graduation, I found another passion in programming and worked as a web applications developer for a few years.</p>
 				<p>Now I feel called again to the fascinating world of UX - a field that sits beautifully between 
 				psychology and development. I can bring to your team coded wireframes and prototypes in addition to utilizing 
 				standard design software. I know how to design for both business and user needs and make sure those
 				 designs are technically feasible. I am passionate about understanding people and creating products 
-				 made especially for them. Let’s work and learn together! <a href="#contact">Contact me</a>.</p>
+				 made especially for them.</p>
+				 <p><span class="strong">Let's work and learn together! <a href="#contact">Contact me</a>.</span></p>
 			</div>
 		</div>
 
-		<div id="skills">
-			<h2>Skills</h2>
+		<div id="skills"  class="section">
+			<h2><span class="blue-highlight">Skills</span></h2>
 			<ul class="skills-list">
 				<li>
-					<img src="assets/testing-icon.png" />
+					<img src="img/icons/testing-icon.png" />
 					<ul>
 						<li>User Research</li>
 						<li>Usability Testing</li>
@@ -64,7 +65,7 @@
 					</ul>
 				</li>
 				<li>
-					<img src="assets/touch-icon.png" />
+					<img src="img/icons/touch-icon.png" />
 					<ul>
 						<li>Wireframing</li>
 						<li>Prototyping</li>
@@ -74,19 +75,19 @@
 				</li>
 											
 				<li>
-					<img src="assets/visual-icon.png" />
+					<img src="img/icons/visual-icon.png" />
 					<ul>
 						<li>Adobe Suite</li>
 						<li>Responsive Design</li>
-						<li>CSS3 &amp;SASS</li>
+						<li>CSS3 &amp; SASS</li>
 						<li>HTML5</li>
 						<li>Bootstrap</li>
 					</ul>
 				</li>
 				<li>
-					<img src="assets/code-icon.png" />
+					<img src="img/icons/code-icon.png" />
 					<ul>
-						<li>Javascript and jQuery</li>
+						<li>Javascript &amp; jQuery</li>
 						<li>PHP</li>
 						<li>MVC</li>
 						<li>MySQL</li>
@@ -95,11 +96,11 @@
 			</ul>
 		</div>
 
-		<div id="portfolio">
-			<h2>Portfolio*</h2>
+		<div id="portfolio" class="section">
+			<h2><span class="blue-highlight">Portfolio*</span></h2>
 			<div class="portfolio-item">
 				<div>
-					<img src="assets/portfolio/taskly.png" />
+					<img src="img/portfolio/taskly.png" />
 				</div>
 				<div>
 					<p class="strong">Taskly</p>
@@ -111,21 +112,19 @@
 
 			<small>*More work and code samples available to share in person</small>
 		</div>
-
-		<div id="contact">
-			<h2>I'd love to hear from you!</h2>
-			<p>also include email address info...</p>
+	</div>
+	<div id="contact" class="section">
+			<h2><span class="blue-highlight">I'd love to hear from you!</span></h2>
 			<a href="#" class="button" onclick="window.open('mailto:alanga48@gmail.com');">Get in Touch</a>
 
 			<div class="social">
 				<ul>
-					<li><img src="assets/social/behance.png"></li>
-					<li><img src="assets/social/linkedin.png"></li>
-					<li><img src="assets/social/github.png"></li>
+					<li><a href="http://www.behance.net/amylanga"><img src="img/social/behance.png"></a></li>
+					<li><a href="http://www.linkedin.com/in/amy-langa-3b8887105"><img src="img/social/linkedin.png"></li>
+					<li><a href="http://github.com/alanga48"><img src="img/social/github.png"></a></li>
 				</ul>
 			</div>
 		</div>
-	</div>
 	</body>
 	<footer>
 		<small>&copy; Amy Langa 2016</small>
