--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 			<ul>
 				<li><a href="#about">About Me</a></li>
 				<li><a href="#skills">Skills</a></li>
-				<li><a href="#portfolio">Portfolio</a></li>
 				<li><a href="#contact">Contact</a></li>
+				<li><a href="#portfolio">Portfolio</a></li>
 				<li><a href="/resume.pdf">Resume</a></li>
 			</ul>
 		</div>
@@ -102,7 +102,7 @@
 			</div>
 		</div>
 
-		<div id="portfolio" class="section">
+		<!-- <div id="portfolio" class="section">
 			<h2><span class="blue-highlight">Portfolio*</span></h2>
 			<div class="portfolio-item">
 				<div class="img-container">
@@ -116,7 +116,7 @@
 				</div>
 			</div>
 			<p class="more-work-available">*More work and code samples available to share in person</p>
-		</div>
+		</div> -->
 	</div>
 	<div id="contact" class="section">
 		<h2><span class="blue-highlight">I'd love to hear from you!</span></h2>
