--- a/index.html
+++ b/index.html
@@ -9,42 +9,32 @@
 	</head>
 	<body>
 
-	<div class="navbar-container">
-		<div class="navbar">
-			<ul>
-				<li><a href="#about">About Me</a></li>
-				<li><a href="#skills">Skills</a></li>
-				<li><a href="#contact">Contact</a></li>
-				<li><a href="#portfolio">Portfolio</a></li>
-				<li><a href="/resume.pdf">Resume</a></li>
-			</ul>
+
+		<div class="intro">
+			<p>UX Designer & Developer</p>
+			<img src="img/amy-langa.png" alt="Amy Langa" />
+			<p class="nav-links">
+				<a href="#about">About</a> / 
+				<a href="#portfolio">Portfolio</a> / 
+				<a href="#contact">Contact</a>
+			</p>
 		</div>
-	</div>
 
-	<div class="intro">
-		<div class="test">
-			<div class="blue-highlight">
-				<h2>Hi, my name is Amy and I'm a</h2>
-				<h1>UX Designer &amp; Developer</h1>
-				<h2>based in Chicago, IL</h2>
-				<div class="more-info">
-					<a class="button" href="#about">Learn More</a>
-				</div>
-
-			</div>
-
-			
-		</div>
-	</div>
-
-	<div class="main-container">
 
 		<div id="about" class="section">
-			<h2><span class="blue-highlight">About Me</span></h2>
-<!-- 			<div class="img-column">
-				<img class="amy-img" src="img/amy-3.png" />
-			</div> -->
-			<div class="about-column">
+			<div class="left-section">
+			<div class="block"></div>
+				<img src="img/about.png" />
+				<p class="nav-links">
+					<a href="#about">About</a> / 
+					<a href="#portfolio">Portfolio</a> / 
+					<a href="#contact">Contact</a>
+				</p>
+			</div>
+			<div class="right-section">
+				<a href="/resume.pdf">View Full Resume</a>
+				<h3>My Journey</h3>
+				<p class="strong">My name is Amy Langa and I am a UX Designer based in Chicago, IL.</p>
 				<p>I believe that data-driven design removes much inefficient subjectivity and allows products to be 
 				molded for the most important people in the conversation - the users.</p>
 				<p>I began my journey studying psychology as an undergrad. I was and still am fascinated by the 
@@ -55,11 +45,37 @@
 				standard design software. I know how to design for both business and user needs and make sure those
 				 designs are technically feasible. I am passionate about understanding people and creating products 
 				 made especially for them.</p>
-				 <p><span class="strong">Let's work and learn together! <a href="#contact">Contact me</a>.</span></p>
+
+				<h3>Experience</h3>
+				<p class="strong">UX Design</p>
+				<ul>
+					<li>User Research</li>
+					<li>Usability Testing</li>
+					<li>Competitive Analysis</li>
+					<li>Wireframing</li>
+					<li>Prototyping</li>
+					<li>Adobe Suite</li>
+					<li>Invision</li>
+					<li>Axure</li>
+				</ul>
+				
+				<p class="strong">Development</p>							
+				<ul>
+					<li>Responsive Design</li>
+					<li>CSS3 &amp; SASS</li>
+					<li>HTML5</li>
+					<li>Bootstrap</li>
+					<li>Javascript &amp; jQuery</li>
+					<li>PHP</li>
+					<li>MVC</li>
+					<li>MySQL</li>
+				</ul>
+
+				<p><span class="strong">Let's work and learn together! <a href="#contact">Contact me</a>.</span></p>
 			</div>
 		</div>
 
-		<div id="skills"  class="section">
+		<!-- <div id="skills"  class="section">
 			<h2><span class="blue-highlight">Skills</span></h2>
 			<div class="skills-list">
 				<div>
@@ -100,39 +116,57 @@
 					</ul>
 				</div>
 			</div>
+		</div> -->
+
+		<div id="portfolio" class="section">
+			<div class="left-section">
+			<div class="block"></div>
+				<img src="img/work.png" />
+				<p class="nav-links">
+					<a href="#about">About</a> / 
+					<a href="#portfolio">Portfolio</a> / 
+					<a href="#contact">Contact</a>
+				</p>
+			</div>
+			<div class="right-section">
+				<div class="portfolio-item">
+					<div class="img-container">
+						<img src="img/portfolio/taskly.png" />
+					</div>
+					<div class="project-desc">
+						<p class="strong">Taskly</p>
+						<p>Taskly is a fictional project management software application. In this three month UX project, 
+						I was in charge of everything, including competitor analysis, user testing, prototyping, and visual 
+						design. The final project is a development-ready design encompassing Taskly's MVP.</p>
+					</div>
+				</div>
+				<p class="more-work-available">*More work and code samples available to share in person</p>
+			</div>
 		</div>
 
-		<!-- <div id="portfolio" class="section">
-			<h2><span class="blue-highlight">Portfolio*</span></h2>
-			<div class="portfolio-item">
-				<div class="img-container">
-					<img src="img/portfolio/taskly.png" />
-				</div>
-				<div class="project-desc">
-					<p class="strong">Taskly</p>
-					<p>Taskly is a fictional project management software application. In this three month UX project, 
-					I was in charge of everything, including competitor analysis, user testing, prototyping, and visual 
-					design. The final project is a development-ready design encompassing Taskly's MVP.</p>
-				</div>
+		<div id="contact" class="section">
+			<div class="left-section">
+			<div class="block"></div>
+				<img src="img/contact.png" />
+				<p class="nav-links">
+					<a href="#about">About</a> / 
+					<a href="#portfolio">Portfolio</a> / 
+					<a href="#contact">Contact</a>
+				</p>
 			</div>
-			<p class="more-work-available">*More work and code samples available to share in person</p>
-		</div> -->
-	</div>
-	<div id="contact" class="section">
-		<h2><span class="blue-highlight">I'd love to hear from you!</span></h2>
-		<div>
-			<a href="mailto:alanga48@gmail.com"><input class="email-input" disabled="true" value="alanga48@gmail.com"/></a>
+			<div class="right-section">
+				<p>If you're interested in working together on a UX project, I'd love to hear from you!</p>
+				<div>
+					<a href="mailto:alanga48@gmail.com">alanga48@gmail.com</a>
+				</div>
+				<a href="http://www.behance.net/amylanga"><img src="img/social/behance.png" /></a>
+				<a href="http://www.linkedin.com/in/amy-langa-3b8887105"><img src="img/social/linkedin.png" /></a>
+				<a href="http://github.com/alanga48"><img src="img/social/github.png" /></a>
+			</div>
 		</div>
-		<div>
-			<input class="phone-input" disabled="true" value="720.234.8292"/>
-		</div>
-	</div>
 	</body>
 	<footer>
 		<script type="javascript" src="assets/scripts/main.js"></script>
 		<p>&copy; Amy Langa 2016</p>
-		<a href="http://www.behance.net/amylanga"><img src="img/social/behance.png" /></a>
-		<a href="http://www.linkedin.com/in/amy-langa-3b8887105"><img src="img/social/linkedin.png" /></a>
-		<a href="http://github.com/alanga48"><img src="img/social/github.png" /></a>
 	</footer>
 </html>
