some small changes and add resume.

--- a/index.html
+++ b/index.html
@@ -2,8 +2,6 @@
 <html>
 	<head>
 		<link rel="stylesheet" type="text/css" href="assets/styles/main.css">
-		<link href='https://fonts.googleapis.com/css?family=Abril+Fatface' rel='stylesheet' type='text/css'>
-		<link href='https://fonts.googleapis.com/css?family=Oxygen:400,700' rel='stylesheet' type='text/css'>
 		<link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
 		<title>Amy Langa</title>
 	</head>
@@ -11,7 +9,7 @@
 
 
 		<div class="intro">
-			<p>UX Designer & Developer</p>
+			<p>UX Designer &amp; Developer</p>
 			<img src="img/amy-langa.png" alt="Amy Langa" />
 			<p class="nav-links">
 				<a href="#about">About</a> / 
@@ -32,8 +30,8 @@
 				</p>
 			</div>
 			<div class="right-section">
-				<a href="/resume.pdf">View Full Resume</a>
-				<h3>My Journey</h3>
+				<p class="align-right"><a target="blank" href="AmyLangaResume.pdf">View Full Resume</a></p>
+				<h3>Background</h3>
 				<p class="strong">My name is Amy Langa and I am a UX Designer based in Chicago, IL.</p>
 				<p>I believe that data-driven design removes much inefficient subjectivity and allows products to be 
 				molded for the most important people in the conversation - the users.</p>
@@ -74,49 +72,6 @@
 				<p><span class="strong">Let's work and learn together! <a href="#contact">Contact me</a>.</span></p>
 			</div>
 		</div>
-
-		<!-- <div id="skills"  class="section">
-			<h2><span class="blue-highlight">Skills</span></h2>
-			<div class="skills-list">
-				<div>
-					<img src="img/icons/testing-icon.png" />
-					<ul>
-						<li>User Research</li>
-						<li>Usability Testing</li>
-						<li>Competitive Analysis</li>
-					</ul>
-				</div>
-				<div>
-					<img src="img/icons/touch-icon.png" />
-					<ul>
-						<li>Wireframing</li>
-						<li>Prototyping</li>
-						<li>Invision</li>
-						<li>Axure</li>
-					</ul>
-				</div>
-											
-				<div>
-					<img src="img/icons/visual-icon.png" />
-					<ul>
-						<li>Adobe Suite</li>
-						<li>Responsive Design</li>
-						<li>CSS3 &amp; SASS</li>
-						<li>HTML5</li>
-						<li>Bootstrap</li>
-					</ul>
-				</div>
-				<div>
-					<img src="img/icons/code-icon.png" />
-					<ul>
-						<li>Javascript &amp; jQuery</li>
-						<li>PHP</li>
-						<li>MVC</li>
-						<li>MySQL</li>
-					</ul>
-				</div>
-			</div>
-		</div> -->
 
 		<div id="portfolio" class="section">
 			<div class="left-section">
