--- a/index.html
+++ b/index.html
@@ -1,37 +1,35 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<link rel="icon" href="img/favicon.jpg">
 		<link rel="stylesheet" type="text/css" href="assets/styles/main.css">
 		<link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
 		<title>Amy Langa</title>
 	</head>
 	<body>
-
-
 		<div class="intro">
 			<p>UX Designer &amp; Developer</p>
 			<img src="img/amy-langa.png" alt="Amy Langa" />
 			<p class="nav-links">
 				<a href="#about">About</a> / 
-				<a href="#portfolio">Portfolio</a> / 
+				<a href="#work">work</a> / 
 				<a href="#contact">Contact</a>
 			</p>
 		</div>
-
-
 		<div id="about" class="section">
 			<div class="left-section">
 			<div class="block"></div>
 				<img src="img/about.png" />
 				<p class="nav-links">
 					<a href="#about">About</a> / 
-					<a href="#portfolio">Portfolio</a> / 
+					<a href="#work">work</a> / 
 					<a href="#contact">Contact</a>
 				</p>
 			</div>
 			<div class="right-section">
-				<p class="align-right"><a target="blank" href="AmyLangaResume.pdf">View Full Resume</a></p>
-				<h3>Background</h3>
+				<p>
+					<a class="open-link-icon" target="blank" href="AmyLangaResume.pdf">View Full Resume &UpperRightArrow;</a>
+				</p>
 				<p class="strong">My name is Amy Langa and I am a UX Designer based in Chicago, IL.</p>
 				<p>I believe that data-driven design removes much inefficient subjectivity and allows products to be 
 				molded for the most important people in the conversation - the users.</p>
@@ -39,57 +37,61 @@
 				complexities of human behavior and wanted to gain a deeper understanding of what motivates people. After 
 				graduation, I found another passion in programming and worked as a web applications developer for a few years.</p>
 				<p>Now I feel called again to the fascinating world of UX - a field that sits beautifully between 
-				psychology and development. I can bring to your team coded wireframes and prototypes in addition to utilizing 
-				standard design software. I know how to design for both business and user needs and make sure those
-				 designs are technically feasible. I am passionate about understanding people and creating products 
-				 made especially for them.</p>
-
-				<h3>Experience</h3>
-				<p class="strong">UX Design</p>
-				<ul>
-					<li>User Research</li>
-					<li>Usability Testing</li>
-					<li>Competitive Analysis</li>
-					<li>Wireframing</li>
-					<li>Prototyping</li>
-					<li>Adobe Suite</li>
-					<li>Invision</li>
-					<li>Axure</li>
-				</ul>
+				psychology and development. I am passionate about understanding people and creating products 
+				 made especially for them through the use of user research and usability testing. I can bring to your team coded wireframes and prototypes in addition to utilizing standard design software. I know how to design for both business and 
+				 user needs and make sure those designs are technically feasible. </p>
 				
-				<p class="strong">Development</p>							
-				<ul>
-					<li>Responsive Design</li>
-					<li>CSS3 &amp; SASS</li>
-					<li>HTML5</li>
-					<li>Bootstrap</li>
-					<li>Javascript &amp; jQuery</li>
-					<li>PHP</li>
-					<li>MVC</li>
-					<li>MySQL</li>
-				</ul>
+				<p><span class="strong">Let's work and learn together! <a href="#contact">Contact me</a></span></p>
 
-				<p><span class="strong">Let's work and learn together! <a href="#contact">Contact me</a>.</span></p>
+				<div class="experience">
+					<h3>Experience</h3>
+					<p class="strong">UX Design</p>
+					<ul class="skills-list">
+						<li>User Research</li>
+						<li>Usability Testing</li>
+						<li>Competitive Analysis</li>
+						<li>Wireframing</li>
+						<li>Prototyping</li>
+						<li>Adobe Suite</li>
+						<li>Invision</li>
+						<li>Axure</li>
+					</ul>
+					
+					<p class="strong">Development</p>							
+					<ul class="skills-list">
+						<li>CSS3 &amp; SASS</li>
+						<li>HTML5</li>
+						<li>Bootstrap</li>
+						<li>Responsive Design</li>
+						<li>Javascript &amp; jQuery</li>
+						<li>PHP</li>
+						<li>MVC</li>
+						<li>MySQL</li>
+					</ul>
+				</div>
 			</div>
 		</div>
 
-		<div id="portfolio" class="section">
+		<div id="work" class="section">
 			<div class="left-section">
 			<div class="block"></div>
 				<img src="img/work.png" />
 				<p class="nav-links">
 					<a href="#about">About</a> / 
-					<a href="#portfolio">Portfolio</a> / 
+					<a href="#work">work</a> / 
 					<a href="#contact">Contact</a>
 				</p>
 			</div>
 			<div class="right-section">
 				<div class="portfolio-item">
 					<div class="img-container">
-						<img src="img/portfolio/taskly.png" />
+						<a href="https://www.behance.net/gallery/32399019/Taskly-Project-Management-Application" target="blank">
+							<img alt="Taskly" src="img/portfolio/taskly-honeycomb.jpg" />
+						</a>
 					</div>
 					<div class="project-desc">
-						<p class="strong">Taskly</p>
+						<a class="title" href="https://www.behance.net/gallery/32399019/Taskly-Project-Management-Application" 
+							target="blank">Taskly &UpperRightArrow;</a>
 						<p>Taskly is a fictional project management software application. In this three month UX project, 
 						I was in charge of everything, including competitor analysis, user testing, prototyping, and visual 
 						design. The final project is a development-ready design encompassing Taskly's MVP.</p>
@@ -105,23 +107,26 @@
 				<img src="img/contact.png" />
 				<p class="nav-links">
 					<a href="#about">About</a> / 
-					<a href="#portfolio">Portfolio</a> / 
+					<a href="#work">work</a> / 
 					<a href="#contact">Contact</a>
 				</p>
 			</div>
 			<div class="right-section">
-				<p>If you're interested in working together on a UX project, I'd love to hear from you!</p>
-				<div>
-					<a href="mailto:alanga48@gmail.com">alanga48@gmail.com</a>
-				</div>
-				<a href="http://www.behance.net/amylanga"><img src="img/social/behance.png" /></a>
-				<a href="http://www.linkedin.com/in/amy-langa-3b8887105"><img src="img/social/linkedin.png" /></a>
-				<a href="http://github.com/alanga48"><img src="img/social/github.png" /></a>
+				<p class="strong">If you're interested in working together on a UX project, <br />
+				I'd love to hear from you!</p>
+				<h3>Amy Langa</h3>
+				<p><a href="mailto:alanga48@gmail.com">alanga48@gmail.com</a></p>
+				<p class="social">
+					<a href="http://www.behance.net/amylanga"><img src="img/social/behance.png" /></a>
+					<a href="http://www.linkedin.com/in/amy-langa-3b8887105"><img src="img/social/linkedin.png" /></a>
+					<a href="http://github.com/alanga48"><img src="img/social/github.png" /></a>
+				</p>
 			</div>
 		</div>
 	</body>
 	<footer>
-		<script type="javascript" src="assets/scripts/main.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+		<script src="assets/scripts/main.js"></script>
 		<p>&copy; Amy Langa 2016</p>
 	</footer>
 </html>
