--- a/index.html
+++ b/index.html
@@ -118,9 +118,9 @@
 				<h3>Amy Langa</h3>
 				<p><a href="mailto:alanga48@gmail.com">alanga48@gmail.com</a></p>
 				<p class="social">
-					<a href="http://www.behance.net/amylanga"><img src="img/social/behance.png" /></a>
-					<a href="http://www.linkedin.com/in/amy-langa-3b8887105"><img src="img/social/linkedin.png" /></a>
-					<a href="http://github.com/alanga48"><img src="img/social/github.png" /></a>
+					<a target="blank" href="http://www.behance.net/amylanga"><img src="img/social/behance.png" /></a>
+					<a target="blank" href="http://www.linkedin.com/in/amy-langa-3b8887105"><img src="img/social/linkedin.png" /></a>
+					<a target="blank" href="http://github.com/alanga48"><img src="img/social/github.png" /></a>
 				</p>
 			</div>
 		</div>
