--- a/Home.html
+++ b/Home.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en"> 
 	<head>
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="icon" href="img/favicon.jpg">
 		<link rel="stylesheet" type="text/css" href="assets/styles/main.css">
 		<link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
@@ -8,24 +10,24 @@
 	</head>
 	<body>
 		<div class="intro">
-			<div class="block"></div>
 			<p>UX Designer &amp; Developer</p>
 			<img src="img/amy-langa.png" alt="Amy Langa" />
 			<p class="nav-links">
 				<a href="#about">About</a> / 
-				<a href="#work">work</a> / 
+				<a href="#work">Work</a> / 
 				<a href="#contact">Contact</a>
 			</p>
 		</div>
 		<div id="about" class="section">
 			<div class="left-section">
-			<div class="block"></div>
-				<img src="img/about.png" />
-				<p class="nav-links">
-					<a href="#about">About</a> / 
-					<a href="#work">work</a> / 
-					<a href="#contact">Contact</a>
-				</p>
+				<div class="title">
+					<img alt="About" src="img/about.png" />
+					<p class="nav-links">
+						<a href="#about">About</a> / 
+						<a href="#work">Work</a> / 
+						<a href="#contact">Contact</a>
+					</p>
+				</div>
 			</div>
 			<div class="right-section">
 				<p>
@@ -75,13 +77,14 @@
 
 		<div id="work" class="section">
 			<div class="left-section">
-				<div class="block"></div>
-				<img src="img/work.png" />
-				<p class="nav-links">
-					<a href="#about">About</a> / 
-					<a href="#work">work</a> / 
-					<a href="#contact">Contact</a>
-				</p>
+				<div class="title">
+					<img alt="Work" src="img/work.png" />
+					<p class="nav-links">
+						<a href="#about">About</a> / 
+						<a href="#work">work</a> / 
+						<a href="#contact">Contact</a>
+					</p>
+				</div>
 			</div>
 			<div class="right-section">
 				<div class="portfolio-item">
@@ -104,30 +107,37 @@
 
 		<div id="contact" class="section">
 			<div class="left-section">
-			<div class="block"></div>
-				<img src="img/contact.png" />
-				<p class="nav-links">
-					<a href="#about">About</a> / 
-					<a href="#work">work</a> / 
-					<a href="#contact">Contact</a>
-				</p>
+				<div class="title">
+					<img alt="Contact" src="img/contact.png" />
+					<p class="nav-links">
+						<a href="#about">About</a> / 
+						<a href="#work">work</a> / 
+						<a href="#contact">Contact</a>
+					</p>
+				</div>
 			</div>
 			<div class="right-section">
 				<p class="strong">If you're interested in working together on a UX project, <br />
 				I'd love to hear from you!</p>
 				<h3>Amy Langa</h3>
-				<p><a href="mailto:alanga48@gmail.com">alanga48@gmail.com</a></p>
+				<p><a href="mailto:alanga48@gmail.com">hello@amylanga.com</a></p>
 				<p class="social">
-					<a target="blank" href="http://www.behance.net/amylanga"><img src="img/social/behance.png" /></a>
-					<a target="blank" href="http://www.linkedin.com/in/amy-langa-3b8887105"><img src="img/social/linkedin.png" /></a>
-					<a target="blank" href="http://github.com/alanga48"><img src="img/social/github.png" /></a>
+					<a target="blank" href="http://www.behance.net/amylanga">
+						<img alt="Behance" src="img/social/behance.png" />
+					</a>
+					<a target="blank" href="http://www.linkedin.com/in/amy-langa-3b8887105">
+						<img alt="LinkedIn" src="img/social/linkedin.png" />
+					</a>
+					<a target="blank" href="http://github.com/alanga48">
+						<img alt="GitHub" src="img/social/github.png" />
+					</a>
 				</p>
 			</div>
 		</div>
+		<footer>
+			<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+			<script src="assets/scripts/main.js"></script>
+			<p>&copy; Amy Langa 2016</p>
+		</footer>
 	</body>
-	<footer>
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
-		<script src="assets/scripts/main.js"></script>
-		<p>&copy; Amy Langa 2016</p>
-	</footer>
 </html>
