Add image and tweak bio.

--- a/Home.html
+++ b/Home.html
@@ -35,18 +35,22 @@
 					<p>
 						<a class="open-link-icon" target="blank" href="AmyLangaResume.pdf">View Full Resume &UpperRightArrow;</a>
 					</p>
-					<p class="strong">My name is Amy Langa and I am a UX Designer based in Chicago, IL.</p>
+					<h2>Hi there!</h2>
+					<p class="strong">My name is Amy Langa and I am a UX Designer &amp; Developer based in Chicago, IL.</p>
+					<div class="img-container row">
+						<img src="img/10219.jpeg" />
+					</div>
 					<p>I believe that data-driven design removes much inefficient subjectivity and allows products to be 
 					molded for the most important people in the conversation - the users.</p>
 					<p>I began my journey studying psychology as an undergrad. I was and still am fascinated by the 
 					complexities of human behavior and wanted to gain a deeper understanding of what motivates people. After 
-					graduation, I found another passion in programming and worked as a web applications developer for a few years.</p>
-					<p>Now I feel called again to the fascinating world of UX - a field that sits beautifully between 
-					psychology and development. I am passionate about understanding people and creating products 
-					 made especially for them through the use of user research and usability testing. I can bring to your team coded wireframes and prototypes in addition to utilizing standard design software. I know how to design for both business and 
+					graduation, I found another passion in programming and have worked as a web applications developer for a few years.</p>
+					<p>Now I feel called again to the exciting world of UX - a field that sits beautifully between 
+					psychology and development. I am driven to understand users and help create products especially for them
+					 through user research and usability testing. I can bring to your team coded wireframes and prototypes in addition to utilizing standard design software. I know how to design for both business and 
 					 user needs and make sure those designs are technically feasible. </p>
 					
-					<p><span class="strong">Let's work and learn together! <a href="#contact">Contact me</a></span></p>
+					<p class="strong contact-me">Let's work and learn together! <a href="#contact">Contact me</a></p>
 
 					<div class="experience">
 						<h3>Experience</h3>
