--- a/Home.html
+++ b/Home.html
@@ -16,6 +16,7 @@
 			<p class="nav-links">
 				<a href="#about">About</a> / 
 				<a href="#work">Work</a> / 
+				<a href="#process">Process</a> / 
 				<a href="#contact">Contact</a>
 			</p>
 		</div>
@@ -27,6 +28,7 @@
 						<p class="nav-links">
 							<a href="#about">About</a> / 
 							<a href="#work">Work</a> / 
+							<a href="#process">process</a> / 
 							<a href="#contact">Contact</a>
 						</p>
 					</div>
@@ -50,7 +52,7 @@
 					 through user research and usability testing. I can bring to your team coded wireframes and prototypes in addition to utilizing standard design software. I know how to design for both business and 
 					 user needs and make sure those designs are technically feasible. </p>
 					
-					<p class="strong contact-me">Let's work and learn together! <a href="#contact">Contact me</a></p>
+					<p class="strong with-space">Let's work and learn together! <a href="#contact">Contact me</a></p>
 
 					<div class="experience">
 						<h3>Experience</h3>
@@ -81,7 +83,6 @@
 				</div>
 			</div>
 		</div>
-
 		<div id="work" class="container-fluid section">
 			<div class="row">
 				<div class="col-md-6 left-section">
@@ -90,6 +91,7 @@
 						<p class="nav-links">
 							<a href="#about">About</a> / 
 							<a href="#work">Work</a> / 
+							<a href="#process">process</a> / 
 							<a href="#contact">Contact</a>
 						</p>
 					</div>
@@ -102,13 +104,20 @@
 							</a>
 						</div>
 						<div class="row">
-							<h3><a class="title" href="https://www.behance.net/gallery/32399019/Taskly-Project-Management-Application" 
-								target="blank">Taskly &UpperRightArrow;</a></h3>
+							<div  class="pull-left">
+								<h3>Taskly</h3>
+							</div>
 						</div>
 						<div class="row">
-							<p>Taskly is a fictional project management software application. In this three month UX project, 
+							<p>Taskly is a fictional project management application. In this three month UX project, 
 							I was in charge of everything, including competitor analysis, user testing, prototyping, and visual 
-							design. The final project is a development-ready design encompassing Taskly's MVP.</p>
+							design. The final product is a development-ready design encompassing Taskly's MVP.</p>
+							<p class="portfolio-links">
+								<a href="https://www.behance.net/gallery/32399019/Taskly-Project-Management-Application" 
+									target="blank">View on Behance &UpperRightArrow;</a>
+								<a href="https://invis.io/AF5X1GVYN" target="blank">
+									View Interactive Prototype &UpperRightArrow;</a>
+							</p>
 						</div>
 						<div class="row">
 							<small>*More work and code samples available to share in person</small>
@@ -117,7 +126,34 @@
 				</div>
 			</div>
 		</div>
-
+		<div id="process" class="container-fluid section">
+			<div class="row">
+				<div class="col-md-6 left-section">
+					<div class="title">
+						<img alt="process" src="img/process.png" />
+						<p class="nav-links">
+							<a href="#about">About</a> / 
+							<a href="#work">Work</a> / 
+							<a href="#process">process</a> / 
+							<a href="#contact">Contact</a>
+						</p>
+					</div>
+				</div>
+				<div class="col-md-6 right-section">
+					<p class="strong with-space">Why should I hire someone with a development background for a UX position?</p>
+					<p>UX encompasses a lot of great things: empathy, usability, objectivity. But one of UX's greatest assets is its efficiency in process. I like to define UX as “data-driven design” because, through research and testing, feedback is gathered early on and throughout the product development cycle. That means would-be usability problems, would-be customer service calls, and would-be feature revisions get caught early on, saving everyone time and sanity.</p>
+					<p>So what can a developer turned UX designer do to increase this efficiency even more?</p>
+					<p class="strong with-space">Coded Prototypes</p>
+					<p>Coding can maximize prototyping efficiency and responsive designs can be easily achieved through the use of frameworks such as Bootstrap. A coded prototype is easy to change, easy to make fully interactive, easy to iterate on, and easy to hand off to developers. Save some steps on pixel-perfect Photoshop mockups and jump right into sketching and testing directly in code.</p>
+					<p class="strong with-space">DRY Designs</p>
+					<p>If you’ve ever programmed, you’re probably familiar with DRY, or “don’t repeat yourself”. A good developer seeks to create an elegant codebase with lots of reusable code. This same technique can be applied to design. A developer turned UX designer sees each widget and behavior as a reusable action. No need to solve the same problem repeatedly; a new problem or design decision should be compared to the existing solutions before something new is added. This isn’t just good for product maintenance, it’s good UX. A product that has a consistent look and behavior will feel more trustworthy to users and keep them coming back.</p>
+					<p class="strong with-space">Intermediary Between Designers and Developers</p>
+					<p>There’s often a feeling of separation between these teams, but there really shouldn’t be. They are two sides of the same coin. Having a UXer with a development background can make designs more technically feasible, inspire an interest in “how the other side lives”, and allow for more productive conversions between designers and developers. This can keep expectations realistic and frustrations down.</p>
+					<p class="strong with-space">Conclusion</p>
+					<p>Development might not be the first place one looks for a UX designer, but a development skillset can bring a host of benefits to a product team.</p>
+				</div>
+			</div>
+		</div>
 		<div id="contact" class="container-fluid section">
 			<div class="row">
 				<div class="col-md-6 left-section">
@@ -125,14 +161,14 @@
 						<img alt="Contact" src="img/contact.png" />
 						<p class="nav-links">
 							<a href="#about">About</a> / 
-							<a href="#work">work</a> / 
+							<a href="#work">Work</a> / 
+							<a href="#process">process</a> / 
 							<a href="#contact">Contact</a>
 						</p>
 					</div>
 				</div>
 				<div class="col-md-6 right-section">
-					<p class="strong">If you're interested in working together on a UX project, <br />
-					I'd love to hear from you!</p>
+					<p class="strong">If you're interested in working together, I'd love to hear from you!</p>
 					<h3>Amy Langa</h3>
 					<p><a href="mailto:alanga48@gmail.com">hello@amylanga.com</a></p>
 					<p class="social">
