--- a/Home.html
+++ b/Home.html
@@ -6,11 +6,11 @@
 		<link rel="icon" href="img/favicon.jpg">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 		<link rel="stylesheet" type="text/css" href="assets/styles/main.css">
-		<link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
+		<link href='https://fonts.googleapis.com/css?family=Lato:400,800' rel='stylesheet' type='text/css'>
 		<title>Amy Langa</title>
 	</head>
 	<body>
-		<div class="intro">
+		<div class="intro" id="intro">
 			<p>UX Designer &amp; Developer</p>
 			<img src="img/amy-langa.png" alt="Amy Langa" />
 			<p class="nav-links">
@@ -19,6 +19,11 @@
 				<a href="#process">Process</a> / 
 				<a href="#contact">Contact</a>
 			</p>
+		</div>
+		<div class="nav-links">
+				<a href="#intro" class="to-top">
+					<span class="glyphicon glyphicon-chevron-up"></span>
+				</a>
 		</div>
 		<div id="about" class="container-fluid section">
 			<div class="row">
