Refine content and add show/hide for skills section.

--- a/Home.html
+++ b/Home.html
@@ -16,7 +16,7 @@
 			<p class="nav-links">
 				<a href="#about">About</a> / 
 				<a href="#work">Work</a> / 
-				<a href="#process">Process</a> / 
+				<a href="#skills">skills</a> / 
 				<a href="#contact">Contact</a>
 			</p>
 		</div>
@@ -33,23 +33,46 @@
 						<p class="nav-links">
 							<a href="#about">About</a> / 
 							<a href="#work">Work</a> / 
-							<a href="#process">process</a> / 
+							<a href="#skills">skills</a> / 
 							<a href="#contact">Contact</a>
 						</p>
 					</div>
 				</div>
 				<div class="col-md-6 right-section">
-					<p>
+	<!-- 				<p>
 						<a class="open-link-icon" target="blank" href="AmyLangaResume.pdf">View Full Resume &UpperRightArrow;</a>
-					</p>
-					<h2>Hi there!</h2>
-					<p class="strong">My name is Amy Langa and I am a UX Designer &amp; Developer based in Chicago, IL.</p>
-					<div class="img-container row">
-						<img src="img/10219.jpeg" />
+					</p> -->
+					<div class="row">
+						<div class="col-sm-4">
+							<img alt="Amy Langa" src="img/102199.jpg" />
+						</div>
+						<div class="col-sm-8">
+							<h2>Hi there!</h2>
+							<p class="strong">My name is Amy Langa and I am a UX Designer
+							with a developer background based in Chicago, IL.</p>
+						</div>
 					</div>
-					<p>I believe that data-driven design removes much inefficient subjectivity and allows products to be 
-					molded for the most important people in the conversation - the users.</p>
-					<p>I began my journey studying psychology as an undergrad. I was and still am fascinated by the 
+					<div class="section-copy">
+						<p>I believe that data-driven design removes much inefficient subjectivity and allows products to be 
+						molded for the most important people in the conversation - the users.</p>
+						<p>I am driven to understand users and help create products especially for them
+						 through user research and usability testing. I can bring to your team coded wireframes and prototypes in addition to utilizing standard design software. I know how to design for both business and 
+						 user needs and make sure those designs are technically feasible. </p>
+						
+						<p class="strong with-space">Let's work and learn together! <a href="#contact">Contact me</a></p>
+						<!-- <p class="strong with-space">Why should I hire someone with a development background for a UX position?</p>
+						<p>UX encompasses a lot of great things: empathy, usability, objectivity. But one of UX's greatest assets is its efficiency in skills. I like to define UX as “data-driven design” because, through research and testing, feedback is gathered early on and throughout the product development cycle. That means would-be usability problems, would-be customer service calls, and would-be feature revisions get caught early on, saving everyone time and sanity.</p>
+						<p>So what can a developer turned UX designer do to increase this efficiency even more?</p>
+						<p class="strong with-space">Coded Prototypes</p>
+						<p>Coding can maximize prototyping efficiency and responsive designs can be easily achieved through the use of frameworks such as Bootstrap. A coded prototype is easy to change, easy to make fully interactive, easy to iterate on, and easy to hand off to developers. Save some steps on pixel-perfect Photoshop mockups and jump right into sketching and testing directly in code.</p>
+						<p class="strong with-space">DRY Designs</p>
+						<p>If you’ve ever programmed, you’re probably familiar with DRY, or “don’t repeat yourself”. A good developer seeks to create an elegant codebase with lots of reusable code. This same technique can be applied to design. A developer turned UX designer sees each widget and behavior as a reusable action. No need to solve the same problem repeatedly; a new problem or design decision should be compared to the existing solutions before something new is added. This isn’t just good for product maintenance, it’s good UX. A product that has a consistent look and behavior will feel more trustworthy to users and keep them coming back.</p>
+						<p class="strong with-space">Intermediary Between Designers and Developers</p>
+						<p>There’s often a feeling of separation between these teams, but there really shouldn’t be. They are two sides of the same coin. Having a UXer with a development background can make designs more technically feasible, inspire an interest in “how the other side lives”, and allow for more productive conversions between designers and developers. This can keep expectations realistic and frustrations down.</p>
+						<p class="strong with-space">Conclusion</p>
+						<p>Development might not be the first place one looks for a UX designer, but a development skillset can bring a host of benefits to a product team.</p> -->
+					</div>
+					<!-- <p>I began my journey studying psychology as an undergrad. I was and still am fascinated by the 
 					complexities of human behavior and wanted to gain a deeper understanding of what motivates people. After 
 					graduation, I found another passion in programming and have worked as a web applications developer for a few years.</p>
 					<p>Now I feel called again to the exciting world of UX - a field that sits beautifully between 
@@ -57,9 +80,9 @@
 					 through user research and usability testing. I can bring to your team coded wireframes and prototypes in addition to utilizing standard design software. I know how to design for both business and 
 					 user needs and make sure those designs are technically feasible. </p>
 					
-					<p class="strong with-space">Let's work and learn together! <a href="#contact">Contact me</a></p>
+					<p class="strong with-space">Let's work and learn together! <a href="#contact">Contact me</a></p> -->
 
-					<div class="experience">
+					<!-- <div class="experience">
 						<h3>Experience</h3>
 						<p class="strong">UX Design</p>
 						<ul class="skills-list">
@@ -84,7 +107,7 @@
 							<li>MVC</li>
 							<li>MySQL</li>
 						</ul>
-					</div>
+					</div> -->
 				</div>
 			</div>
 		</div>
@@ -96,7 +119,7 @@
 						<p class="nav-links">
 							<a href="#about">About</a> / 
 							<a href="#work">Work</a> / 
-							<a href="#process">process</a> / 
+							<a href="#skills">skills</a> / 
 							<a href="#contact">Contact</a>
 						</p>
 					</div>
@@ -114,9 +137,7 @@
 							</div>
 						</div>
 						<div class="row">
-							<p>Taskly is a fictional project management application. In this three month UX project, 
-							I was in charge of everything, including competitor analysis, user testing, prototyping, and visual 
-							design. The final product is a development-ready design encompassing Taskly's MVP.</p>
+							<p>UX research and design for Taskly project management application.</p>
 							<p class="portfolio-links">
 								<a href="https://www.behance.net/gallery/32399019/Taskly-Project-Management-Application" 
 									target="blank">View on Behance &UpperRightArrow;</a>
@@ -131,31 +152,67 @@
 				</div>
 			</div>
 		</div>
-		<div id="process" class="container-fluid section">
+		<div id="skills" class="container-fluid section">
 			<div class="row">
 				<div class="col-md-6 left-section">
 					<div class="title">
-						<img alt="process" src="img/process.png" />
+						<img alt="skills" src="img/skills.png" />
 						<p class="nav-links">
 							<a href="#about">About</a> / 
 							<a href="#work">Work</a> / 
-							<a href="#process">process</a> / 
+							<a href="#skills">skills</a> / 
 							<a href="#contact">Contact</a>
 						</p>
 					</div>
 				</div>
 				<div class="col-md-6 right-section">
-					<p class="strong with-space">Why should I hire someone with a development background for a UX position?</p>
-					<p>UX encompasses a lot of great things: empathy, usability, objectivity. But one of UX's greatest assets is its efficiency in process. I like to define UX as “data-driven design” because, through research and testing, feedback is gathered early on and throughout the product development cycle. That means would-be usability problems, would-be customer service calls, and would-be feature revisions get caught early on, saving everyone time and sanity.</p>
-					<p>So what can a developer turned UX designer do to increase this efficiency even more?</p>
-					<p class="strong with-space">Coded Prototypes</p>
-					<p>Coding can maximize prototyping efficiency and responsive designs can be easily achieved through the use of frameworks such as Bootstrap. A coded prototype is easy to change, easy to make fully interactive, easy to iterate on, and easy to hand off to developers. Save some steps on pixel-perfect Photoshop mockups and jump right into sketching and testing directly in code.</p>
-					<p class="strong with-space">DRY Designs</p>
-					<p>If you’ve ever programmed, you’re probably familiar with DRY, or “don’t repeat yourself”. A good developer seeks to create an elegant codebase with lots of reusable code. This same technique can be applied to design. A developer turned UX designer sees each widget and behavior as a reusable action. No need to solve the same problem repeatedly; a new problem or design decision should be compared to the existing solutions before something new is added. This isn’t just good for product maintenance, it’s good UX. A product that has a consistent look and behavior will feel more trustworthy to users and keep them coming back.</p>
-					<p class="strong with-space">Intermediary Between Designers and Developers</p>
-					<p>There’s often a feeling of separation between these teams, but there really shouldn’t be. They are two sides of the same coin. Having a UXer with a development background can make designs more technically feasible, inspire an interest in “how the other side lives”, and allow for more productive conversions between designers and developers. This can keep expectations realistic and frustrations down.</p>
-					<p class="strong with-space">Conclusion</p>
-					<p>Development might not be the first place one looks for a UX designer, but a development skillset can bring a host of benefits to a product team.</p>
+					<div class="row skills-list">
+						<div class="col-sm-4">
+							<h3>UX</h3>
+							<ul>
+								<li>User Research</li>
+								<li>Usability Testing</li>
+								<li>Wireframing &amp; Prototyping</li>
+								<li>Adobe Suite</li>
+								<li>Invision</li>
+							</ul>
+						</div>
+						<div class="col-sm-4">
+							<h3>Front End</h3>
+							<ul>
+								<li>CSS3 &amp; SASS</li>
+								<li>HTML5</li>
+								<li>Bootstrap</li>
+								<li>Responsive Design</li>
+								<li>Javascript &amp; jQuery</li>
+							</ul>
+						</div>
+						<div class="col-sm-4">
+							<h3>Back End</h3>
+							<ul>
+								<li>PHP</li>
+								<li>MVC Frameworks</li>
+								<li>MySQL</li>
+							</ul>
+						</div>
+					</div>
+<!-- 					<div class="row">
+						<a class="open-link-icon" target="blank" href="AmyLangaResume.pdf">View Full Resume &UpperRightArrow;</a>
+					</div> -->
+					<hr />
+					<div>
+						<p class="strong with-space">Why should I hire someone with a development background for a UX position?</p>
+						<p>UX encompasses a lot of great things: empathy, usability, objectivity. But one of UX's greatest assets is its efficiency in process. I like to define UX as “data-driven design” because, through research and testing, feedback is gathered early on and throughout the product development cycle. That means would-be usability problems, would-be customer service calls, and would-be feature revisions get caught early on, saving everyone time and sanity.</p>
+						<p>So what can a developer turned UX designer do to increase this efficiency even more?</p>
+						<p class="strong with-space">Coded Prototypes</p>
+						<p>Coding can maximize prototyping efficiency and responsive designs can be easily achieved through the use of frameworks such as Bootstrap. A coded prototype can have interactions that are more accurate to the final product than non-coded prototypes, allowing for more controlled experiments during user testing. They are also is easy to change, easy to make fully interactive, easy to iterate on, and easy to hand off to developers.</p>
+						<p class="strong with-space">DRY Designs</p>
+						<p>If you’ve ever programmed, you’re probably familiar with DRY, or “don’t repeat yourself”. A good developer seeks to create an elegant codebase with lots of reusable code. This same technique can be applied to design. A developer turned UX designer sees each widget and behavior as a reusable action. No need to solve the same problem repeatedly; a new problem or design decision should be compared to the existing solutions before something new is added. This isn’t just good for product maintenance, it’s good UX. A product that has a consistent look and behavior will feel more trustworthy to users.</p>
+						<p class="strong with-space">Intermediary Between Designers and Developers</p>
+						<p>There’s often a feeling of separation between these teams, but there really shouldn’t be. They are two sides of the same coin. Having a UXer with a development background can make designs more technically feasible, inspire an interest in “how the other side lives”, and allow for more productive conversions between designers and developers. This can keep expectations realistic and frustrations down.</p>
+						<p class="strong with-space">Conclusion</p>
+						<p>Development might not be the first background one considers for UX, but a development skillset can bring a host of benefits to a product team.</p>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -167,7 +224,7 @@
 						<p class="nav-links">
 							<a href="#about">About</a> / 
 							<a href="#work">Work</a> / 
-							<a href="#process">process</a> / 
+							<a href="#skills">skills</a> / 
 							<a href="#contact">Contact</a>
 						</p>
 					</div>
