--- a/Home.html
+++ b/Home.html
@@ -53,13 +53,11 @@
 						</div>
 					</div>
 					<div class="section-copy">
-						<p>I believe that data-driven design removes much inefficient subjectivity and allows products to be 
-						molded for the most important people in the conversation - the users.</p>
-						<p>I am driven to understand users and help create products especially for them
-						 through user research and usability testing. I can bring to your team coded wireframes and prototypes in addition to utilizing standard design software. I know how to design for both business and 
-						 user needs and make sure those designs are technically feasible. </p>
+						<p>I've worked for three years as a full stack developer and have had a lot of hands on experience with creating
+						interfaces, user flows, and interactions. Holding a BA in psychology, UX has been of growing interest to me throughout my career, but it wasn't until I learned more deeply and applied its practices that I truly appreciated its benefits. I can personally atest that data-driven design makes so much sense for the development of digital products.</p>
+						<p>I aim to apply my development knowledge while working to understand users and help create products especially for them.  I can bring to your team coded prototypes in addition to utilizing standard design software. I know how to design for both business and user needs and make sure those designs are technically feasible. </p>
 						
-						<p class="strong with-space">Let's work and learn together! <a href="#contact">Contact me</a></p>
+						<p class="strong with-space">Let's work and learn together! <a class="nav-links" href="#contact">Contact me</a></p>
 						<!-- <p class="strong with-space">Why should I hire someone with a development background for a UX position?</p>
 						<p>UX encompasses a lot of great things: empathy, usability, objectivity. But one of UX's greatest assets is its efficiency in skills. I like to define UX as “data-driven design” because, through research and testing, feedback is gathered early on and throughout the product development cycle. That means would-be usability problems, would-be customer service calls, and would-be feature revisions get caught early on, saving everyone time and sanity.</p>
 						<p>So what can a developer turned UX designer do to increase this efficiency even more?</p>
@@ -135,15 +133,15 @@
 							<div  class="pull-left">
 								<h3>Taskly</h3>
 							</div>
+							<div class="pull-right">
+								<a href="https://www.behance.net/gallery/32399019/Taskly-Project-Management-Application" 
+									target="blank">Behance &UpperRightArrow;</a>&nbsp;&nbsp;
+								<a href="https://invis.io/AF5X1GVYN" target="blank">
+									Interactive Prototype &UpperRightArrow;</a>
+							</div>
 						</div>
 						<div class="row">
 							<p>UX research and design for Taskly project management application.</p>
-							<p class="portfolio-links">
-								<a href="https://www.behance.net/gallery/32399019/Taskly-Project-Management-Application" 
-									target="blank">View on Behance &UpperRightArrow;</a>
-								<a href="https://invis.io/AF5X1GVYN" target="blank">
-									View Interactive Prototype &UpperRightArrow;</a>
-							</p>
 						</div>
 						<div class="row">
 							<small>*More work and code samples available to share in person</small>
