tweaks on copy and stying, js.

--- a/Home.html
+++ b/Home.html
@@ -6,7 +6,7 @@
 		<link rel="icon" href="img/favicon.jpg">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 		<link rel="stylesheet" type="text/css" href="assets/styles/main.css">
-		<link href='https://fonts.googleapis.com/css?family=Lato:400,800' rel='stylesheet' type='text/css'>
+		<link href='https://fonts.googleapis.com/css?family=Lato:400,500,600,800' rel='stylesheet' type='text/css'>
 		<title>Amy Langa</title>
 	</head>
 	<body>
@@ -54,10 +54,10 @@
 					</div>
 					<div class="section-copy">
 						<p>I've worked for three years as a full stack developer and have had a lot of hands on experience with creating
-						interfaces, user flows, and interactions. Holding a BA in psychology, UX has been of growing interest to me throughout my career, but it wasn't until I learned more deeply and applied its practices that I truly appreciated its benefits. I can personally atest that data-driven design makes so much sense for the development of digital products.</p>
-						<p>I aim to apply my development knowledge while working to understand users and help create products especially for them.  I can bring to your team coded prototypes in addition to utilizing standard design software. I know how to design for both business and user needs and make sure those designs are technically feasible. </p>
+						interfaces, user flows, and interactions. Holding a BA in psychology, UX has long been of growing interest to me, but it wasn't until I learned more deeply about its process that I truly appreciated its benefits. I can personally atest that data-driven design makes so much sense for the development of digital products.</p>
+						<p>I aim to apply my development knowledge while working to understand users and help create products especially for them.</p>
 						
-						<p class="strong with-space">Let's work and learn together! <a class="nav-links" href="#contact">Contact me</a></p>
+						<p class="strong with-space nav-links">Let's work and learn together! <a href="#contact">Contact me</a></p>
 						<!-- <p class="strong with-space">Why should I hire someone with a development background for a UX position?</p>
 						<p>UX encompasses a lot of great things: empathy, usability, objectivity. But one of UX's greatest assets is its efficiency in skills. I like to define UX as “data-driven design” because, through research and testing, feedback is gathered early on and throughout the product development cycle. That means would-be usability problems, would-be customer service calls, and would-be feature revisions get caught early on, saving everyone time and sanity.</p>
 						<p>So what can a developer turned UX designer do to increase this efficiency even more?</p>
@@ -131,17 +131,18 @@
 						</div>
 						<div class="row">
 							<div  class="pull-left">
-								<h3>Taskly</h3>
+								<h3><a href="https://www.behance.net/gallery/32399019/Taskly-Project-Management-Application" target="_blank">
+									Taskly</a></h3>
 							</div>
-							<div class="pull-right">
+							<!-- <div class="pull-right">
 								<a href="https://www.behance.net/gallery/32399019/Taskly-Project-Management-Application" 
 									target="blank">Behance &UpperRightArrow;</a>&nbsp;&nbsp;
 								<a href="https://invis.io/AF5X1GVYN" target="blank">
 									Interactive Prototype &UpperRightArrow;</a>
-							</div>
+							</div> -->
 						</div>
 						<div class="row">
-							<p>UX research and design for Taskly project management application.</p>
+						<p>Taskly is a project management application in which I was in charge of UX research and design. The final product is a development-ready design encompassing Taskly's MVP.</p>
 						</div>
 						<div class="row">
 							<small>*More work and code samples available to share in person</small>
@@ -233,7 +234,7 @@
 				<div class="col-md-6 right-section">
 					<p class="strong">If you're interested in working together, I'd love to hear from you!</p>
 					<h3>Amy Langa</h3>
-					<p><a href="mailto:alanga48@gmail.com">hello@amylanga.com</a></p>
+					<p><a href="mailto:hello@amylanga.com">hello@amylanga.com</a></p>
 					<p class="social">
 						<a target="blank" href="http://www.behance.net/amylanga">
 							<img alt="Behance" src="img/social/behance.png" />
@@ -249,8 +250,8 @@
 			</div>
 		</div>
 		<footer>
-			<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqmds1yVqOtnepnHVP9aJ7md" crossorigin="anonymous"></script>
 			<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+			<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqmds1yVqOtnepnHVP9aJ7md" crossorigin="anonymous"></script>
 			<script src="assets/scripts/main.js"></script>
 			<p>&copy; Amy Langa 2016</p>
 		</footer>
