--- a/Home.html
+++ b/Home.html
@@ -54,7 +54,7 @@
 					</div>
 					<div class="section-copy">
 						<p>I've worked for three years as a full stack developer and have had a lot of hands on experience with creating
-						interfaces, user flows, and interactions. Holding a BA in psychology, UX has long been of growing interest to me, but it wasn't until I learned more deeply about its process that I truly appreciated its benefits. I can personally atest that data-driven design makes so much sense for the development of digital products.</p>
+						interfaces, user flows, and interactions. Holding a BA in psychology, user experience had long been of growing interest to me, but it wasn't until I learned more deeply about the UX process that I truly appreciated its benefits. I can personally atest that data-driven design makes so much sense for the development of digital products.</p>
 						<p>I aim to apply my development knowledge while working to understand users and help create products especially for them.</p>
 						
 						<p class="strong with-space nav-links">Let's work and learn together! <a href="#contact">Contact me</a></p>
@@ -129,22 +129,24 @@
 								<img alt="Taskly" src="img/portfolio/taskly-honeycomb.jpg" />
 							</a>
 						</div>
-						<div class="row">
-							<div  class="pull-left">
-								<h3><a href="https://www.behance.net/gallery/32399019/Taskly-Project-Management-Application" target="_blank">
-									Taskly</a></h3>
-							</div>
-							<!-- <div class="pull-right">
-								<a href="https://www.behance.net/gallery/32399019/Taskly-Project-Management-Application" 
-									target="blank">Behance &UpperRightArrow;</a>&nbsp;&nbsp;
-								<a href="https://invis.io/AF5X1GVYN" target="blank">
-									Interactive Prototype &UpperRightArrow;</a>
-							</div> -->
+						<div class="project-title row">
+							<h3>Taskly</h3>
+							<span class="featured-project">Featured Project</span>
 						</div>
 						<div class="row">
 						<p>Taskly is a project management application in which I was in charge of UX research and design. The final product is a development-ready design encompassing Taskly's MVP.</p>
 						</div>
 						<div class="row">
+							<div class="btn-toolbar">
+								<a class="btn btn-primary" href="https://www.behance.net/gallery/32399019/Taskly-Project-Management-Application" target="_blank">
+									View Taskly
+								</a>
+								<a class="btn btn-secondary" href="https://www.behance.net/amylanga" target="_blank">
+									View All Projects
+								</a>
+							</div>
+						</div>
+						<div class="row top-buffer">
 							<small>*More work and code samples available to share in person</small>
 						</div>
 					</div>
